# Projekt_AiZO

./: CMakeLists.txt  DynamicArray.cpp  DynamicArray.h  FillArray.cpp  FillArray.h  Main.cpp  Menu.cpp  Menu.h  SimulationSorting.cpp  SimulationSorting.h  Sorting.cpp  Sorting.h  TestSorting.cpp  TestSorting.h  liczby.txt
Main/: Main.cpp  Menu.cpp  Menu.h
Operations/: FillArray.cpp  FillArray.h  Sorting.cpp  Sorting.h
Submenu/: SimulationSorting.cpp  SimulationSorting.h  TestSorting.cpp  TestSorting.h
